syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.foriton";
option java_outer_classname = "NumbersProto";

service NumbersGenerator {
  rpc GenerateNumbers(NumbersRequest) returns (stream NumbersResponse);
}

message NumbersRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumbersResponse {
  int32 value = 1;
}
